# PygameLevelEditor

./: README.md  format.py  pyproject.toml  requirements.txt  test.json  test_2.json
docs/patterns/: stages.md
pgle/: __main__.py  _types.py  abc.py  events.py  tiles.py
pgle/states/: editor.py
pgle/ui/: grid.py
